# Allegro_hand-v4-gesture-tracking-

./: README.md  frames_2026-06-16_18.42.07.gv  python_soket_hand.py
install/: local_setup.sh  setup.sh
install/allegro_hand_controllers/share/allegro_hand_controllers/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/allegro_hand_controllers/share/allegro_hand_controllers/cmake/: allegro_hand_controllersConfig.cmake
install/allegro_hand_controllers/share/allegro_hand_controllers/launch/: allegro_rviz.launch.py  view_hand.launch.py
install/allegro_hand_controllers/share/ament_index/resource_index/package_run_dependencies/: allegro_hand_controllers
install/allegro_hand_description/share/allegro_hand_description/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
install/allegro_hand_description/share/allegro_hand_description/urdf/: allegro_hand_description_left.urdf  allegro_hand_description_right.urdf
install/allegro_hand_driver/include/allegro_hand_driver/: AllegroHandDrv.h
install/allegro_hand_driver/share/allegro_hand_driver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/allegro_hand_driver/share/allegro_hand_driver/cmake/: ament_cmake_export_targets-extras.cmake
install/allegro_hand_driver/share/ament_index/resource_index/package_run_dependencies/: allegro_hand_driver
install/allegro_hand_keyboards/lib/allegro_hand_keyboards/: allegro_hand_keyboard
install/allegro_hand_keyboards/share/allegro_hand_keyboards/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/allegro_hand_keyboards/share/ament_index/resource_index/package_run_dependencies/: allegro_hand_keyboards
install/allegro_hand_parameters/share/allegro_hand_parameters/: local_setup.dsv  local_setup.sh  package.bash  package.sh  package.xml  package.zsh
install/bhand/include/bhand/: BHand.h  BHandDef.h
install/bhand/share/bhand/: package.ps1  package.sh
install/bhand/share/bhand/cmake/: bhandConfig.cmake
install/mediapipe_test/lib/mediapipe_test/: mediapipe_allegro_bridge  point_visual
install/mediapipe_test/share/mediapipe_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/allegro_hand_controllers/: CMakeLists.txt  package.xml
src/allegro_hand_controllers/launch/: allegro_hand.launch.py
src/allegro_hand_controllers/rviz/: hand.rviz
src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_grasp.cpp  allegro_node_grasp.h  allegro_node_pd.cpp  allegro_node_pd.h
src/allegro_hand_controllers/src/bhand/: BHand.h  BHandDef.h
src/allegro_hand_description/: CMakeLists.txt
src/allegro_hand_driver/: CMakeLists.txt  package.xml
src/allegro_hand_driver/include/allegro_hand_driver/: AllegroHandDef.h
src/allegro_hand_driver/src/: AllegroHandDrv.cpp
src/allegro_hand_driver/src/candrv/: candef.h  candrv.h  socket_can.cpp
src/allegro_hand_keyboards/: CMakeLists.txt
src/allegro_hand_keyboards/src/: allegro_hand_keyboard.cpp
src/allegro_hand_parameters/: CMakeLists.txt  gains_pd.yaml
src/bhand/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/allegro_hand_description/share/allegro_hand_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/allegro_hand_description/share/allegro_hand_description/meshes/: 40_10_link_g_r.stl
src/install/allegro_hand_parameters/share/allegro_hand_parameters/: package.dsv  package.ps1  package.sh
src/install/allegro_hand_parameters/share/allegro_hand_parameters/cmake/: allegro_hand_parametersConfig.cmake
src/install/bhand/share/ament_index/resource_index/parent_prefix_path/: bhand
src/install/bhand/share/bhand/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
src/log/: latest_build
src/mediapipe_test/: setup.cfg  setup.py
src/mediapipe_test/mediapipe_test/: mediapipe_node.py
