<?xml version="1.0"?>
<package format="2">
  <name>allegro_hand_controllers</name>
  <version>1.0.0</version>
  <description>The Main ROS2 package for controlling Allegro Hand V4</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="jh.bong@wonikrobotics.com">JinHwon Bong</author>
  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>allegro_hand_driver</depend>
  <depend>bhand</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
