<?xml version="1.0"?>
<package format="3">
  <name>allegro_hand_keyboards</name>
  <version>1.0.0</version>
  <description>The keyboard grasp commands.</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="jh.bong@wonikrobotics.com">JinHwon Bong</author>
  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>allegro_hand_driver</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
